feature/JATP-23_JATP-36/Login-Register-UI

--- a/Views/Auth/LoginBasic.cshtml
+++ b/Views/Auth/LoginBasic.cshtml
@@ -1,10 +1,11 @@
 @{
   Layout = "_BlankLayout";
   ViewData["Title"] = "Login Basic - Pages";
+  TempData["appName"] = "DataViz Manager";
 }
 
 @section PageStyles {
-<link rel="stylesheet" href="~/vendor/css/pages/page-auth.css">
+  <link rel="stylesheet" href="~/vendor/css/pages/page-auth.css">
 }
 
 @* ************** Content ************** *@
@@ -23,18 +24,21 @@
             </a>
           </div>
           <!-- /Logo -->
-          <h4 class="mb-1">Welcome to @TempData.Peek("appName")! 👋</h4>
-          <p class="mb-6">Please sign-in to your account and start the adventure</p>
+          <h3 class="mb-1 text-center">Sign in</h3>
+          <p class="mb-6">Please sign-in to your account</p>
 
           <form id="formAuthentication" class="mb-6" action="~/" method="POST">
             <div class="mb-6">
               <label for="email" class="form-label">Email or Username</label>
-              <input type="text" class="form-control" id="email" name="email-username" placeholder="Enter your email or username" autofocus>
+              <input type="text" class="form-control" id="email" name="email-username"
+                placeholder="Enter your email or username" autofocus>
             </div>
             <div class="mb-6 form-password-toggle">
               <label class="form-label" for="password">Password</label>
               <div class="input-group input-group-merge">
-                <input type="password" id="password" class="form-control" name="password" placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;" aria-describedby="password" />
+                <input type="password" id="password" class="form-control" name="password"
+                  placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
+                  aria-describedby="password" />
                 <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
               </div>
             </div>
@@ -57,7 +61,7 @@
           </form>
 
           <p class="text-center">
-            <span>New on our platform?</span>
+            <span>New on this platform?</span>
             <a href="/Auth/RegisterBasic">
               <span>Create an account</span>
             </a>
