feature/JATP-23_JATP-36/Login-Register-UI

--- a/Views/Auth/LoginBasic.cshtml
+++ b/Views/Auth/LoginBasic.cshtml
@@ -20,7 +20,7 @@
           <div class="app-brand justify-content-center">
             <a href="/" class="app-brand-link gap-2">
               <span class="app-brand-logo demo">@await Html.PartialAsync("../_Partials/_Macros")</span>
-              <span class="app-brand-text demo text-heading fw-bold">@TempData.Peek("appName")</span>
+              <span class="app-brand-text demo text-heading fw-bold">DataVizManager</span>
             </a>
           </div>
           <!-- /Logo -->
