--- a/Views/Auth/RegisterBasic.cshtml
+++ b/Views/Auth/RegisterBasic.cshtml
@@ -1,6 +1,7 @@
 @{
   Layout = "_BlankLayout";
   ViewData["Title"] = "Register Basic - Pages";
+  TempData["appName"] = "DataViz Manager";
 }
 
 @section PageStyles {
@@ -20,7 +21,7 @@
           <div class="app-brand justify-content-center mb-6">
             <a href="/" class="app-brand-link gap-2">
               <span class="app-brand-logo demo">@await Html.PartialAsync("../_Partials/_Macros")</span>
-              <span class="app-brand-text demo text-heading fw-bold">DataVizManager</span>
+              <span class="app-brand-text demo text-heading fw-bold">@TempData.Peek("appName")</span>
             </a>
           </div>
           <!-- /Logo -->
