--- a/Views/Dashboards/Index.cshtml
+++ b/Views/Dashboards/Index.cshtml
@@ -12,6 +12,13 @@
 }
 
 @* ************** Content ************** *@
+
+@if (TempData["LoginMessage"] != null)
+{
+  <script>
+    alert('@TempData["LoginMessage"]');
+  </script>
+}
 <div class="row">
 
 </div>
