--- a/Views/Auth/LoginBasic.cshtml
+++ b/Views/Auth/LoginBasic.cshtml
@@ -1,6 +1,7 @@
 @using Microsoft.AspNetCore.Components
 
 @using System.Threading;
+@using System.Diagnostics.Eventing.Reader
 @inject NavigationManager Navigation
 
 @{
@@ -9,12 +10,16 @@
   TempData["appName"] = "DataViz Manager";
 }
 
-
 @section PageStyles {
   <link rel="stylesheet" href="~/vendor/css/pages/page-auth.css">
 }
 
 @* ************** Content ************** *@
+
+@if (TempData["SuccessMessage"] != null)
+{
+  <script>alert("Registration is successful. Please Login.")</script>
+}
 
 <div class="container-xxl">
   <div class="authentication-wrapper authentication-basic container-p-y">
@@ -33,11 +38,11 @@
           <h3 class="mb-1 text-center">Sign in</h3>
           <p class="mb-6">Please sign-in to your account</p>
 
-          <form id="formAuthentication" class="mb-6" asp-controller="Auth" asp-action="" method="POST">
+          <form id="formAuthentication" class="mb-6" asp-controller="Auth" asp-action="Login" method="POST">
             <div class="mb-6">
               <label for="email" class="form-label">Email or Username</label>
-              <input type="text" class="form-control" id="email" name="email-username"
-                placeholder="Enter your email or username" autofocus>
+              <input type="text" class="form-control" id="email" name="email" placeholder="Enter your email or username"
+                autofocus>
             </div>
             <div class="mb-6 form-password-toggle">
               <label class="form-label" for="password">Password</label>
