[JATP-28] Add List-Datasets-UI-API

--- a/Views/LayoutExamples/Blank.cshtml
+++ b/Views/LayoutExamples/Blank.cshtml
@@ -2,6 +2,7 @@
   ViewData["Title"] = "Blank layout - Layouts";
   Layout = "_BlankLayout";
 }
+@using DataVizManager.Models;
 @* ************** Content ************** *@
 
 <h4 class="p-6">Blank Page</h4>
