--- a/Views/Shared/Sections/_Scripts.cshtml
+++ b/Views/Shared/Sections/_Scripts.cshtml
@@ -6,6 +6,7 @@
   <script src="~/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
   <script src="~/vendor/js/menu.js"></script>
   <script src="~/js/site.js"></script>
+  @* <script src="~/bootstrap/js/bootstrap.min.js"></script> *@
 </environment>
 <environment exclude="Development">
   <script src="~/vendor/libs/jquery/jquery.js" asp-append-version="true"></script>
@@ -14,4 +15,5 @@
   <script src="~/vendor/libs/perfect-scrollbar/perfect-scrollbar.js" asp-append-version="true"></script>
   <script src="~/vendor/js/menu.js" asp-append-version="true"></script>
   <script src="~/js/site.js" asp-append-version="true"></script>
+  @* <script src="~/bootstrap/js/bootstrap.min.js"></script> *@
 </environment>
