--- a/Views/Report/Index.cshtml
+++ b/Views/Report/Index.cshtml
@@ -1,6 +1,20 @@
 @{
   ViewData["Title"] = "Report";
 }
+@using System.Security.Claims
+@using Microsoft.AspNetCore.Http
+@model IEnumerable<Reports>
+
+@if (User.Identity?.IsAuthenticated ?? false)
+{
+  <p>Welcome, @User.Identity?.Name</p>
+}
+
+@{
+
+  // Alternatively, if the username is stored as the NameIdentifier:
+  // string username = HttpContext.User.FindFirstValue(ClaimTypes.NameIdentifier);
+}
 
 @section PageScripts {
   <script src="~/js/dashboards-analytics.js"></script>
@@ -23,62 +37,103 @@
   TempData.Remove("Invalid");
 }
 
-<div class="row g-6">
-  <!-- Form controls -->
-  <div class="col-md-6">
-    <form asp-controller="Report" asp-action="SaveWR" method="POST">
-      <div class="card">
-        <h5 class="card-header">Work Result</h5>
-        <div class="card-body px-12">
-          <div>
-            <label for="html5-number-input" class="col-md-2 col-form-label">Voice Call</label>
-            <input class="form-control" type="number" value="" name="VoiceCallCount" id="html5-number-input" />
-          </div>
-          <div>
-            <label for="html5-number-input" class="col-md-2 col-form-label">Video Call</label>
-            <input class="form-control" type="number" value="" name="VideoCallCount" id="html5-number-input" />
-          </div>
-          <div>
-            <label for="html5-number-input" class="col-md-2 col-form-label">Mock Interview</label>
-            <input class="form-control" type="number" value="" name="MockInterviewCount" id="html5-number-input" />
-          </div>
-          <div>
-            <label for="html5-date-input" class="col-md-2 col-form-label">Date</label>
-            <input class="form-control" type="date" value="2021-06-18" name="Date" id="html5-date-input" />
-          </div>
-          <button type="submit" class="btn btn-primary mt-3 float-end" id="btnWRSave">Save</button>
+
+<!-- Modal -->
+<form asp-controller="Report" asp-action="SaveWR" method="post">
+  <div class="modal fade" id="modalCenter" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modalCenterTitle">New Report</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-      </div>
-    </form>
-  </div>
-
-
-  <!-- Input Sizing -->
-  <div class="col-md-6">
-    <div class="card">
-      <h5 class="card-header">Report</h5>
-
-      <div class="card-body">
-        <form asp-controller="Report" asp-action="SaveSR" method="POST">
-          <small class="text-light fw-medium">Standup Report</small>
-          <div>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
+        <div class="modal-body">
+          <div class="row g-6">
+            <div class="col mb-0">
+              <label for="VoiceCall" class="form-label">VoiceCall</label>
+              <input type="number" name="VoiceCallCount" class="form-control">
+            </div>
+            <div class="col mb-0">
+              <label for="VideoCall" class="form-label">VideoCall</label>
+              <input type="number" name="VideoCallCount" class="form-control">
+            </div>
           </div>
-          <button type="submit" class="btn btn-primary mt-3 float-end" id="btnSRSave">Save</button>
-        </form>
-      </div>
-
-      <hr class="m-0" />
-
-      <div class="card-body">
-        <form asp-controller="Report" asp-action="SaveDR" method="POST">
-          <small class="text-light fw-medium">Daily Report</small>
-          <div>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
+          <div class="row g-6">
+            <div class="col mb-0">
+              <label for="AppliedJobCount" class="form-label">Applied Job Count</label>
+              <input type="number" name="AppliedJobCount" class="form-control">
+            </div>
+            <div class="col mb-0">
+              <label for="MockInterviewCount" class="form-label">Mock Interview Count</label>
+              <input type="number" name="MockInterviewCount" class="form-control">
+            </div>
           </div>
-          <button type="submit" class="btn btn-primary mt-3 float-end" id="btnDRSave">Save</button>
-        </form>
+          <div>
+            <input type="hidden" name="UserName" value="@User.Identity?.Name">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">OK</button>
+        </div>
       </div>
     </div>
   </div>
+</form>
+
+
+<div class="row">
+  <div class="card">
+    <h4 class="card-header">
+      Report History
+      <button type="button" class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#modalCenter">New
+        Report</button>
+    </h4>
+
+    <div class="table-responsive text-nowrap">
+      <table class="table">
+        <thead>
+          <tr>
+            <th><i class="bx bx-phone text-default"></i>Voice Call</th>
+            <th><i class="bx bx-video text-default"></i>Video Call</th>
+            <th><i class="bx bx-group text-default"></i>Mock Interview</th>
+            <th><i class="bx bx-briefcase text-default"></i>Applied Job</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody class="table-border-bottom-0">
+          @foreach (var record in Model)
+          {
+            <tr>
+              <td>
+                <span>@record.VoiceCallCount</span>
+              </td>
+              <td>
+                <span>@record.VideoCallCount</span>
+              </td>
+              <td>
+                <span>@record.MockInterviewCount</span>
+              </td>
+              <td>
+                <span>@record.AppliedJob</span>
+              </td>
+              <td>
+                <div class="dropdown">
+                  <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown"><i
+                      class="bx bx-dots-vertical-rounded"></i></button>
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item" href="javascript:void(0);"><i class="bx bx-edit-alt me-1"></i> Edit</a>
+                    <a class="dropdown-item" href="javascript:void(0);"><i class="bx bx-trash me-1"></i> Delete</a>
+                  </div>
+                </div>
+              </td>
+            </tr>
+          }
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <!--/ Basic Bootstrap Table -->
 </div>
+
+<!--/ Basic Bootstrap Table -->
