--- a/Views/Shared/Sections/_Styles.cshtml
+++ b/Views/Shared/Sections/_Styles.cshtml
@@ -1,7 +1,9 @@
 <!-- Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+<link
+  href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+  rel="stylesheet">
 <environment include="Development">
   <!-- Fonts & Flag icons -->
   <link rel="stylesheet" href="~/vendor/fonts/boxicons.css" />
@@ -16,6 +18,7 @@
 
   <!-- Pages CSS -->
   <link rel="stylesheet" href="~/vendor/css/pages/page-auth.css" />
+  @* <link rel="stylesheet" href="~/bootstrap/css/bootstrap.min.css" /> *@
 
   <!-- Application stylesheets -->
   <link rel="stylesheet" href="~/css/site.css" />
@@ -27,7 +30,8 @@
 
   <!-- Core CSS -->
   <link rel="stylesheet" href="~/vendor/css/core.css" class="template-customizer-core-css" asp-append-version="true" />
-  <link rel="stylesheet" href="~/vendor/css/theme-default.css" class="template-customizer-theme-css" asp-append-version="true" />
+  <link rel="stylesheet" href="~/vendor/css/theme-default.css" class="template-customizer-theme-css"
+    asp-append-version="true" />
   <link rel="stylesheet" href="~/css/demo.css" />
 
   <!-- `perfect-scrollbar` library required by SideNav plugin -->
