--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using AspnetCoreMvcFull
 @using AspnetCoreMvcFull.Models
+@using DataVizManager.Database
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
